[package]
name = "poison-queue-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "env"] }
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
